--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.8",
+    "lucide-react": "^0.412.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
