--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.412.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "remixicon": "^4.1.0"
+    "remixicon": "^4.1.0",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
