--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "lucide-react": "^0.412.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^7.1.1",
     "react-icons": "^5.2.1",
     "remixicon": "^4.1.0",
+    "swiper": "^11.1.8",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
