--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.1.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "clsx": "^2.1.1",
@@ -20,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^7.1.1",
     "react-icons": "^5.2.1",
+    "react-particles": "^2.12.2",
     "remixicon": "^4.1.0",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.4.0"
